if(WITH_CLASP)
	file(GLOB GRINGO_SRC *.cpp)
	include_directories (${GrinGo_SOURCE_DIR}/lib/gringo/include ../lib ${GrinGo_BINARY_DIR}/lib/gringo/config ${GrinGo_SOURCE_DIR}/lib/libprogram_opts)
else(WITH_CLASP)
	file(GLOB GRINGO_SRC main.cpp options.cpp timer.cpp)
	include_directories (${GrinGo_SOURCE_DIR}/lib/gringo/include ${GrinGo_BINARY_DIR}/lib/gringo/config ${GrinGo_SOURCE_DIR}/lib/libprogram_opts)
endif(WITH_CLASP)

add_executable (gringo-app ${GRINGO_SRC})

if (WITH_ICLASP)
	target_link_libraries (gringo-app gringo-lib clasp-lib program_opts-lib)
	set_target_properties(gringo-app PROPERTIES OUTPUT_NAME iclingo)
else (WITH_ICLASP)
	if(WITH_CLASP)
		target_link_libraries (gringo-app gringo-lib clasp-lib program_opts-lib)
		set_target_properties(gringo-app PROPERTIES OUTPUT_NAME clingo)
	else(WITH_CLASP)
		target_link_libraries (gringo-app gringo-lib program_opts-lib)
		set_target_properties(gringo-app PROPERTIES OUTPUT_NAME gringo)
	endif(WITH_CLASP)
endif(WITH_ICLASP)

