if(WITH_CLASP)
	file(GLOB GRINGO_SRC *.cpp clasp/*.cpp)
        include_directories (${GrinGo_SOURCE_DIR}/lib/gringo/include ../lib ${GrinGo_BINARY_DIR}/lib/gringo/config ${GrinGo_SOURCE_DIR}/libprogram_opts ${GrinGo_SOURCE_DIR}/lib/libclasp)
else(WITH_CLASP)
	set (GRINGO_SRC main.cpp gringo_app.cpp gringo_options.cpp)
        include_directories (${GrinGo_SOURCE_DIR}/lib/gringo/include ${GrinGo_BINARY_DIR}/lib/gringo/config ${GrinGo_SOURCE_DIR}/libprogram_opts)
endif(WITH_CLASP)

file(GLOB GRINGO_INC *.h)

add_executable (gringo-app ${GRINGO_SRC} ${GRINGO_INC})

if (WITH_ICLASP)
	target_link_libraries (gringo-app gringo-lib clasp-lib program_opts-lib)
	set_target_properties(gringo-app PROPERTIES OUTPUT_NAME iclingo)
else (WITH_ICLASP)
	if(WITH_CLASP)
		target_link_libraries (gringo-app gringo-lib clasp-lib program_opts-lib)
		set_target_properties(gringo-app PROPERTIES OUTPUT_NAME clingo)
	else(WITH_CLASP)
		target_link_libraries (gringo-app gringo-lib program_opts-lib)
		set_target_properties(gringo-app PROPERTIES OUTPUT_NAME gringo)
	endif(WITH_CLASP)
endif(WITH_ICLASP)

